Add lombok to build.gradle, update readme

--- a/build.gradle
+++ b/build.gradle
@@ -48,13 +48,14 @@ repositories {
 
 // Project dependencies
 dependencies {
-	    compile('org.spongepowered:mixin:0.7.4-SNAPSHOT') {
+	compile('org.spongepowered:mixin:0.7.4-SNAPSHOT') {
         exclude module: 'asm-commons'
         exclude module: 'asm-tree'
         exclude module: 'launchwrapper'
         exclude module: 'guava'
         exclude module: 'log4j-core'
     }
+    compile 'org.projectlombok:lombok:1.16.12'
 }
 
 // Gradle default tasks
